# substring-complexity

./: .gitmodules  CMakeLists.txt  README.md  delta-stream.cpp  delta.cpp
data/: chr19head.txt  chr19tail.txt
internal/: common.hpp  delta-stream-mt.hpp  delta-stream.hpp  prime.hpp
